# Concurrent-and-parallel-project

./: .travis.yml  Dockerfile  README.md  build.sh  build_cds-tool.sh  install_deps.sh  run_experiment.sh
11mopp/: Makefile  README.md
11mopp/game-of-life/: Makefile  README  life.c  life.out
11mopp/histogram/: .Makefile.swp  Makefile  README  histogram.c  histogram.in  histogram.out  life.c
11mopp/string-parsing/: .gitignore  Makefile  README  spec.cc  spec_invalid.in
11mopp/sudokount/: .gitignore  Makefile  README  sudokount.c
cds-tool/: Cargo.toml  cds_server.json
cds-tool/src/: docker.rs  main.rs  run.rs  server.rs
ci/: before_deploy.sh  script.sh
