[package]
name = "cds-tool"
version = "0.1.1"
authors = ["Franz Gregor <franz.gregor@tu-dresden.de>"]

[dependencies]
# logging
log = "0.3"
env_logger = "0.4"
# simply error handling
error-chain = "0.10"
# argument parser
clap = "2.23"
# de-/serializing for config reading and HTTP requests/responses
base64 = "0.5"
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# client dependencies
hyper = "0.10"
# server dependencies
iron = "0.5"
router = "0.5"
